--- a/_layouts/hello-default.html
+++ b/_layouts/hello-default.html
@@ -187,6 +187,8 @@
             {% if page.linkedin %}
             <li><a href="https://linkedin.com/in/{{ page.linkedin }}" class="icon circle fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
             {% endif %}
+            {% if page.storygraph %}
+            <li><a href="https://app.thestorygraph.com/profile/{{ page.storygraph_username }}"><span class="glyphicon glyphicon-book"></span></a></li>
         </ul>
 
     <ul class="copyright">
