--- a/_layouts/hello-default.html
+++ b/_layouts/hello-default.html
@@ -189,7 +189,8 @@
             {% endif %}
             {% if page.storygraph %}
             <li><a href="https://app.thestorygraph.com/profile/{{ page.storygraph_username }}"><span class="glyphicon glyphicon-book"></span></a></li>
-        </ul>
+            {% endif %}
+          </ul>
 
     <ul class="copyright">
         <li>this website is maintained by {{ site.author}}</li>
