--- a/_layouts/about-page.html
+++ b/_layouts/about-page.html
@@ -60,7 +60,7 @@
         <a href="/">home</a></h1>
       <nav id="nav">
         <ul>
-          <li style="text-transform:lowercase"><a href="/_layouts/about-page.html">about</a></li>
+          <li style="text-transform:lowercase"><a href="{{ page.page_url }}/#about">about</a></li>
           {% if page.portfolio %}
           <li style="text-transform:lowercase"><a href="{{ page.page_url }}/#{{ page.portfolio }}">{{ page.portfolio }}</a></li>
           {% endif %}
@@ -113,31 +113,6 @@
                 {% endif %}      
               </section>    
 
-            <!-- section: work-->
-            {% if page.portfolio %}
-            <section class="wrapper style3 container special" id="{{ page.portfolio }}">
-					      <header class="special">
-                  <h2><strong>{{ page.portfolio }}</strong></h2>
-                </header>
-                <p>{{ page.portfolio_description }}</p>
-                {% for categories in site.data[page.portfolio][page.portfolio] %}
-                <div class="row">
-
-                          <div class="12u">
-                              <h3 style="margin-bottom:2em; font-size:1.25em"><strong>{{ categories.category}}</strong></h3>
-                          </div>
-
-                          {% for items in categories.items %}
-                          <div class="6u item">
-                            <section>
-                              <div class="image featured">
-                                  <img src="{{ items.image }}" alt="" />
-                              </div>
-
-                              {% include {{ items.item }} %}
-                            </section>
-                          </div>
-                          {% endfor %}
                 </div>
 
                 {% endfor %}
@@ -146,29 +121,7 @@
             {% endif %}
       </article>
 
-        <!-- section: cta -->
-        {% if page.cta %}
-      <section class="cta" id="{{ page.cta }}" 
-      {% if page.background_image %}
-      style="background-image: url('{{ page.background_image }}'); background-attachment: fixed; background-size: cover;"
-      {% endif %}>
-			
-          <header class="major">
-            <h2>{{ page.cta }}</h2>
-          </header>
-          {% if page.cta %}
-          <p style="padding: 0em 1em; text-align: center">{{ page.cta_description }}</p>
-          {% endif %}
-          <footer style="margin-bottom:8em">
-              {% if page.cta_button %}
-            <ul class="buttons">
-              <li><a href="{{ page.cta_button }}" class="button">{{ page.cta_button_label }}</a></li>
-            </ul>
-              {% endif %}
-          </footer>
-        
-        </section>
-        {% endif %}
+      
     </div>
 
     <!-- Footer -->
