--- a/_layouts/hello-default.html
+++ b/_layouts/hello-default.html
@@ -60,7 +60,7 @@
         <a href="/">home</a></h1>
       <nav id="nav">
         <ul>
-          <li style="text-transform:lowercase"><a href="/_layouts/about-page.html">about</a></li>
+          <li style="text-transform:lowercase"><a href="{{ /_layouts/about-page.html }}/#about">about</a></li>
           {% if page.portfolio %}
           <li style="text-transform:lowercase"><a href="{{ page.page_url }}/#{{ page.portfolio }}">{{ page.portfolio }}</a></li>
           {% endif %}
